home now unsecured page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,8 @@
 <body>
 <h1>Welcome!</h1>
 
-<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+<p>This is unsecured page</p>
+
+<p>Click <a th:href="@{/hello}">here</a> to get to secured page.</p>
 </body>
 </html>
