--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,5 +16,6 @@
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
+<div><a th:href="@{/}">Back to unsecured page</a></div>
 </body>
 </html>
