login and password

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,5 +17,7 @@
     <div><input type="submit" value="Sign In"/></div>
 </form>
 <div><a th:href="@{/}">Back to unsecured page</a></div>
+<div><label> User Name : user </label></div>
+<div><label> Password: password </label></div>
 </body>
 </html>
